libigl.a and mosek/tetgen extras compile on redhat (with some warnings and removed deprecations), static library makefile for anttweakbar
Former-commit-id: 3d067452a799042723747a5d2cbf6564afbc4b4e

--- a/include/igl/mosek/Makefile
+++ b/include/igl/mosek/Makefile
@@ -5,7 +5,7 @@ all: libiglmosek
 debug: libiglmosek
 
 include ../../../Makefile.conf
-all: CFLAGS += -O3 -DNDEBUG -j 
+all: CFLAGS += -O3 -DNDEBUG
 debug: CFLAGS += -g -Wall -Werror
 
 .PHONY: libiglmosek
@@ -20,12 +20,14 @@ INC+=-I../../../include/
 # EXPECTS THAT CFLAGS IS ALREADY SET APPROPRIATELY 
 
 # Eigen dependency
-EIGEN3_INC=-I/opt/local/include/eigen3 -I/opt/local/include/eigen3/unsupported
+EIGEN3_INC=-I$(OPT)/local/include/eigen3 -I$(OPT)/local/include/eigen3/unsupported
 INC+=$(EIGEN3_INC)
 
 # mosek dependency
 # TODO: linux, 32 bit etc
-MOSEKPLATFORM=osx64x86
+ifndef MOSEKPLATFORM
+  MOSEKPLATFORM=osx64x86
+endif
 MOSEK=/usr/local/mosek
 MOSEK_INC=-I$(MOSEK)/6/tools/platform/$(MOSEKPLATFORM)/h
 MOSEK_LIB=-L$(MOSEK)/6/tools/platform/$(MOSEKPLATFORM)/bin -lmosek64
