--- a/Makefile.conf
+++ b/Makefile.conf
@@ -1,19 +1,56 @@
 #############################################################################
 # FLAGS 
 #############################################################################
-AFLAGS += -arch x86_64 -m64
+UNAME := $(shell uname)
+
 CFLAGS += -Wall
+
+ifeq ($(UNAME), Linux)
+	OPT = /usr/
+else
+	OPT = /opt/
+	# I guess arch only works in Mac OSX
+	AFLAGS += -arch x86_64 -m64
+endif
+
 
 # Default parameters for the IGL group members based on there computer's
 # username
 ifndef IGL_USERNAME
 	IGL_USERNAME := $(shell whoami)
 endif
+
 ifeq ($(IGL_USERNAME),ajx)
+	MOSEKPLATFORM=osx64x86
 	IGL_WITH_TETGEN=1
 	IGL_WITH_MATLAB=1
 	IGL_WITH_MOSEK=1
 endif
+
+ifeq ($(IGL_USERNAME),jalec)
+	MOSEKPLATFORM=linux64x86
+	IGL_WITH_TETGEN=1
+	IGL_WITH_MATLAB=0
+	IGL_WITH_MOSEK=1
+	OPENGL_LIB=-lGL -lGLU
+	GLUT_LIB=-lglut
+	ANTTWEAKBAR_LIB=-lAntTweakBar
+endif
 ifeq ($(IGL_USERNAME),daniele)
 	IGL_WITH_MATLAB=1
+endif
+
+#############################################################################
+# DEFAULTS (USUALLY TO SOMETHING THAT WORKS FOR SURE ON MAC OS X
+#############################################################################
+
+ifndef OPENGL_LIB
+	OPENGL_LIB=-framework OpenGL
+endif
+ifndef GLUT_LIB
+	GLUT_LIB=-framework GLUT
+endif
+ifndef ANTTWEAKBAR_LIB
+	# AntTweakBar needs AppKit on mac os x
+	ANTTWEAKBAR_LIB=-lAntTweakBar -framework AppKit
 endif
