added lib to make file
Former-commit-id: 470d970839f30bb346672afa210d3e60eace8d34

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -27,7 +27,7 @@ ifeq ($(IGL_USERNAME),ajx)
 	IGL_WITH_MOSEK=1
 endif
 
-ifeq ($(IGL_USERNAME),jalec)
+ifeq ($(IGL_USERNAME),jalec_linux) 
 	MOSEKPLATFORM=linux64x86
 	IGL_WITH_TETGEN=1
 	IGL_WITH_MATLAB=0
