--- a/Makefile.conf
+++ b/Makefile.conf
@@ -25,6 +25,7 @@ ifeq ($(IGL_USERNAME),ajx)
 	IGL_WITH_TETGEN=1
 	IGL_WITH_MATLAB=1
 	IGL_WITH_MOSEK=1
+	IGL_WITH_PNG=1
 endif
 
 ifeq ($(IGL_USERNAME),jalec_linux) 
