--- a/Makefile.conf
+++ b/Makefile.conf
@@ -26,6 +26,8 @@ ifeq ($(IGL_USERNAME),ajx)
 	IGL_WITH_MATLAB=1
 	IGL_WITH_MOSEK=1
 	IGL_WITH_PNG=1
+	# I don't use llvm
+	AFLAGS=-m64
 endif
 
 ifeq ($(IGL_USERNAME),jalec_linux) 
