added olga s's settings to Makefile.conf

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -28,6 +28,14 @@ ifeq ($(IGL_USERNAME),ajx)
 	IGL_WITH_PNG=1
 endif
 
+ifeq ($(IGL_USERNAME),sorkineo)
+	MOSEKPLATFORM=osx64x86
+	IGL_WITH_TETGEN=1
+	IGL_WITH_MATLAB=0
+	IGL_WITH_MOSEK=1
+	IGL_WITH_PNG=0
+endif
+
 ifeq ($(IGL_USERNAME),jalec_linux) 
 	MOSEKPLATFORM=linux64x86
 	IGL_WITH_TETGEN=1
