--- a/Makefile.conf
+++ b/Makefile.conf
@@ -36,10 +36,13 @@ ifeq ($(IGL_USERNAME),jalec_linux)
 	OPENGL_LIB=-lGL -lGLU
 	GLUT_LIB=-lglut
 	ANTTWEAKBAR_LIB=-lAntTweakBar
+	IGL_WITH_PNG=1
 endif
 ifeq ($(IGL_USERNAME),daniele)
 	IGL_WITH_MATLAB=1
 endif
+
+$(info Hello, $(IGL_USERNAME))
 
 #############################################################################
 # DEFAULTS (USUALLY TO SOMETHING THAT WORKS FOR SURE ON MAC OS X
