updated bbw demo (need to test again

--- a/external/tetgen/makefile
+++ b/external/tetgen/makefile
@@ -19,7 +19,7 @@ CXX = g++
 # -O2, -O3 ... to find the best optimization level.
 # ===================================================================
 
-CXXFLAGS = -O2
+CXXFLAGS = -g
 
 # PREDCXXFLAGS is for compiling J. Shewchuk's predicates. It should
 # always be equal to -O0 (no optimization). Otherwise, TetGen may not
