openmp for normals and igl makefile

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -28,6 +28,7 @@ ifeq ($(IGL_USERNAME),ajx)
 	IGL_WITH_PNG=1
 	# I don't use llvm
 	AFLAGS=-m64
+	OPENMP=-fopenmp
 endif
 
 ifeq ($(IGL_USERNAME),alecjaco) 
@@ -40,6 +41,7 @@ ifeq ($(IGL_USERNAME),alecjaco)
 	OPENGL_LIB=-lGL -lGLU
 	#GLUT_LIB=-lglut
 	ANTTWEAKBAR_LIB=-lAntTweakBar
+	OPENMP=-fopenmp
 endif
 
 ifeq ($(IGL_USERNAME),sorkineo)
@@ -59,6 +61,7 @@ ifeq ($(IGL_USERNAME),jalec_linux)
 	GLUT_LIB=-lglut
 	ANTTWEAKBAR_LIB=-lAntTweakBar
 	IGL_WITH_PNG=1
+	OPENMP=-fopenmp
 endif
 
 ifeq ($(IGL_USERNAME),daniele)
