--- a/Makefile.conf
+++ b/Makefile.conf
@@ -10,7 +10,7 @@ ifeq ($(UNAME), Linux)
 else
 	DEFAULT_PREFIX = /opt/local/
 	# I guess arch only works in Mac OSX
-	AFLAGS += -arch x86_64 -m64
+	AFLAGS += -arch x86_64 -m64 -march=corei7-avx
 endif
 
 
@@ -27,8 +27,9 @@ ifeq ($(IGL_USERNAME),ajx)
 	IGL_WITH_MOSEK=1
 	IGL_WITH_PNG=1
 	# I don't use llvm
-	AFLAGS=-m64
+	AFLAGS = -m64 -march="corei7-avx"
 	OPENMP=-fopenmp
+	SSE=-mavx
 endif
 
 ifeq ($(IGL_USERNAME),alecjaco) 
