generalized boundary_faces and fixed mat4_to_quat

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -27,9 +27,11 @@ ifeq ($(IGL_USERNAME),ajx)
 	IGL_WITH_MOSEK=1
 	IGL_WITH_PNG=1
 	# I don't use llvm
-	AFLAGS = -m64 -march="corei7-avx"
+#AFLAGS = -m64 -march="corei7-avx"
+	AFLAGS = -m64
 	OPENMP=-fopenmp
-	SSE=-mavx
+#SSE=-mavx
+	SSE=-msse
 endif
 
 ifeq ($(IGL_USERNAME),alecjaco) 
