added missing std::
Former-commit-id: 686bb00905bf3958447c57f02646a74d8b120009

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -68,7 +68,8 @@ ifeq ($(IGL_USERNAME),jalec_linux)
 endif
 
 ifeq ($(IGL_USERNAME),daniele)
-	IGL_WITH_MATLAB=1
+	IGL_WITH_MATLAB=0
+	AFLAGS = -m64
 endif
 
 
