--- a/external/medit/Makefile.igl
+++ b/external/medit/Makefile.igl
@@ -13,7 +13,11 @@ GL2PS_INC=-I$(GL2PS)/include
 GL2PS_LIB=-L$(GL2PS)/lib -lgl2ps
 
 INC = -I${LIBMESH} $(IGL_INC) $(ANTTWEAKBAR_INC) $(GL2PS_INC)
-LIBS  = -framework OpenGL -framework GLUT -L${LIBMESH} -lmesh $(IGL_LIB) $(ANTTWEAKBAR_LIB) $(GL2PS_LIB)
+LIBS  = -framework OpenGL -framework GLUT -L${LIBMESH} -lmesh $(IGL_LIB) $(ANTTWEAKBAR_LIB) $(GL2PS_LIB)\
+  -liglpng -L/usr/local/igl/igl_lib/external/yimg/ -lyimg\
+  -L/usr/X11/lib -lpng \
+  -L/usr/local/igl/igl_lib/external/AntTweakBar -lAntTweakBar \
+  -I/opt/local/include -L/opt/local/lib -lboost_thread-mt -lboost_system-mt \
 #CFLAGS = -Wall -O3 -DIGL
 CFLAGS = -Wall -g -DIGL
 
