--- a/Makefile.conf
+++ b/Makefile.conf
@@ -28,7 +28,7 @@ ifeq ($(IGL_USERNAME),ajx)
 	IGL_WITH_PNG=1
 	# I don't use llvm
 #AFLAGS = -m64 -march="corei7-avx"
-	AFLAGS = -m64
+	AFLAGS = -m64 -msse4.2
 	OPENMP=-fopenmp
 #SSE=-mavx
 	SSE=-msse
