embree extra and bone visible implementation (for bone heat computation)
Former-commit-id: 64f552164141706d30ff1b97343ffac3217375fb

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -23,11 +23,13 @@ endif
 ifeq ($(IGL_USERNAME),ajx)
 	MOSEKPLATFORM=osx64x86
 	IGL_WITH_TETGEN=1
+	IGL_WITH_EMBREE=1
 	IGL_WITH_MATLAB=1
 	IGL_WITH_MOSEK=1
 	IGL_WITH_PNG=1
 	# I don't use llvm
 #AFLAGS = -m64 -march="corei7-avx"
+	# msse4.2 is necessary for me to get embree to compile correctly
 	AFLAGS = -m64 -msse4.2
 	OPENMP=-fopenmp
 #SSE=-mavx
