--- a/external/AntTweakBar/src/Makefile.mesa.igl
+++ b/external/AntTweakBar/src/Makefile.mesa.igl
@@ -12,14 +12,14 @@ OUT_DIR		= ../lib
 #LFLAGS		= 
 #OUT_DIR	= ../lib/debug
 
-#BASE		= /Developer/SDKs/MacOSX10.5.sdk/System/Library/Frameworks
-CXX      	= g++
-#CXXFLAGS 	= $(CXXCFG) -Wall -fPIC -fno-strict-aliasing -D_MACOSX -ObjC++  -D__PLACEMENT_NEW_INLINE
-CXXFLAGS = $(CXXCFG) -Wall -fPIC -fno-strict-aliasing -D_MACOSX -x objective-c++ -D__PLACEMENT_NEW_INLINE
-INCPATH  	= -I../include -I/usr/local/include -I/usr/X11R6/include -I/usr/include
-#-I$(BASE)/OpenGL.framework/Headers/ -I$(BASE)/GLUT.framework/Headers/ -I$(BASE)/AppKit.framework/Headers/
-LINK     	= g++
-LIBS 		= -framework OpenGL -framework GLUT -framework AppKit
+
+CXX      	= gcc
+CXXFLAGS 	= $(CXXCFG) -Wall -fPIC -fno-strict-aliasing -D_UNIX -D__PLACEMENT_NEW_INLINE
+INCPATH  	= -I../include -I/usr/local/include -I$(HOME)/include -I/usr/include
+LINK     	= gcc
+#LIBS     	= -L/usr/X11R6/lib -L. -lglfw -lGL -lGLU -lX11 -lXxf86vm -lXext -lpthread -lm
+#LIBS     	= -L/usr/X11R6/lib -lGL -lX11 -lXxf86vm -lXext -lpthread -lm
+LIBS 		=
 AR       	= ar cqs
 RANLIB   	=
 TAR      	= tar -cf
@@ -38,7 +38,7 @@ NO_STDERR	= 2> /dev/null
 
 
 # name of the application:
-TARGET 	    = AntTweakBar
+TARGET 		= AntTweakBar
 
 # source files without extension:
 SRC_FILES	= TwColors.cpp TwFonts.cpp TwOpenGL.cpp TwOpenGLCore.cpp TwBar.cpp TwMgr.cpp LoadOGL.cpp LoadOGLCore.cpp TwEventGLFW.c TwEventGLUT.c TwEventSDL.c TwEventSDL12.c TwEventSDL13.c TwEventSFML.cpp
@@ -65,6 +65,7 @@ all: 	Makefile $(TARGET)
 $(TARGET): $(OBJS)
 	@echo "===== Link $@ ====="
 	$(LINK) $(LFLAGS) -dynamiclib -Wl,-undefined -Wl,dynamic_lookup  -o $(OUT_DIR)/lib$(TARGET)$(SO_EXT) $(OBJS) $(LIBS)
+	rm -f $(OUT_DIR)/lib$(TARGET)$(AR_EXT)
 	$(AR) $(OUT_DIR)/lib$(TARGET)$(AR_EXT) $(OBJS)
 
 .cpp.o:
