* removed STL container array from XMLSerializer to compile on g++ 4.2

--- a/include/igl/xml/Makefile
+++ b/include/igl/xml/Makefile
@@ -37,7 +37,7 @@ INC+=$(TINYXML2_INC) $(ANTTWEAKBAR_INC)
 ANTTWEAKBAR_INC=-I../../../external/AntTweakBar/include
 INC+=$(ANTTWEAKBAR_INC)
 
-CFLAGS+=-std=c++11
+#CFLAGS+=-std=c++11
 
 obj: 
 	mkdir -p obj
