--- a/Makefile.conf
+++ b/Makefile.conf
@@ -78,19 +78,28 @@ ifeq ($(IGL_USERNAME),chrsch)
   ifeq ($(UNAME), Linux)
     DEFAULT_PREFIX=/usr
     IGL_WITH_XML=1
-	IGL_WITH_TETGEN=0
+    IGL_WITH_TETGEN=0
     IGL_WITH_MATLAB=0
-	IGL_WITH_PNG=0
-	IGL_WITH_MOSEK=0
-	#MOSEKPLATFORM=linux64x86
+    IGL_WITH_PNG=0
+    IGL_WITH_MOSEK=0
+    #MOSEKPLATFORM=linux64x86
     OPENGL_LIB=-lGL -lGLU
     GLUT_LIB=-lglut
     ANTTWEAKBAR_LIB=-lAntTweakBar
     OPENMP=-fopenmp
-	AFLAGS = -Wfatal-errors
+    AFLAGS = -Wfatal-errors
   else
-	IGL_WITH_MATLAB=0
-	AFLAGS = -m64
+    IGL_WITH_XML=1
+    IGL_WITH_TETGEN=0
+    IGL_WITH_MATLAB=0
+    IGL_WITH_PNG=0
+    IGL_WITH_MOSEK=0
+    OPENGL_INC=-I$(DEFAULT_PREFIX)/include
+    OPENGL_LIB=-lGL -lGLU
+    #GLUT_LIB=-lglut
+    ANTTWEAKBAR_LIB=-lAntTweakBar
+    OPENMP=-fopenmp
+    AFLAGS = -m64
   endif
 endif
 
