compress in tutorial, better header in compress, ifndef IGL_NO_OPENGL and IGL_NO_ANTTWEAKBAR guards, compress compiles without these, undo svd
Former-commit-id: 7acb90973774999334a0245e22bcbb4b2177265f

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -33,8 +33,6 @@ ifeq ($(IGL_USERNAME),ajx)
 	# msse4.2 is necessary for me to get embree to compile correctly
 	AFLAGS = -m64 -msse4.2
 	OPENMP=-fopenmp
-#SSE=-mavx
-	SSE=-msse
 endif
 
 ifeq ($(IGL_USERNAME),alecjaco) 
@@ -45,7 +43,8 @@ ifeq ($(IGL_USERNAME),alecjaco)
 	#IGL_WITH_MOSEK=1
 	OPENGL_INC=-I$(DEFAULT_PREFIX)/include
 	OPENGL_LIB=-lGL -lGLU
-	#GLUT_LIB=-lglut
+	# Glut is needed only for examples
+	GLUT_LIB=-lglut
 	ANTTWEAKBAR_LIB=-lAntTweakBar
 	OPENMP=-fopenmp
 endif
@@ -64,6 +63,7 @@ ifeq ($(IGL_USERNAME),jalec_linux)
 	IGL_WITH_MATLAB=0
 	IGL_WITH_MOSEK=1
 	OPENGL_LIB=-lGL -lGLU
+	# Glut is needed only for examples
 	GLUT_LIB=-lglut
 	ANTTWEAKBAR_LIB=-lAntTweakBar
 	IGL_WITH_PNG=1
@@ -85,6 +85,7 @@ ifeq ($(IGL_USERNAME),chrsch)
     IGL_WITH_MOSEK=0
     #MOSEKPLATFORM=linux64x86
     OPENGL_LIB=-lGL -lGLU
+    # Glut is needed only for examples
     GLUT_LIB=-lglut
     ANTTWEAKBAR_LIB=-lAntTweakBar
     OPENMP=-fopenmp
@@ -97,7 +98,8 @@ ifeq ($(IGL_USERNAME),chrsch)
     IGL_WITH_MOSEK=0
     OPENGL_INC=-I$(DEFAULT_PREFIX)/include
     OPENGL_LIB=-lGL -lGLU
-    #GLUT_LIB=-lglut
+    # Glut is needed only for examples
+    GLUT_LIB=-lglut
     ANTTWEAKBAR_LIB=-lAntTweakBar
     OPENMP=-fopenmp
     AFLAGS = -m64
