--- a/Makefile.conf
+++ b/Makefile.conf
@@ -33,6 +33,8 @@ ifeq ($(IGL_USERNAME),ajx)
 	# msse4.2 is necessary for me to get embree to compile correctly
 	AFLAGS = -m64 -msse4.2
 	OPENMP=-fopenmp
+	#EIGEN3_INC=-I$(DEFAULT_PREFIX)/include/eigen3 -I$(DEFAULT_PREFIX)/include/eigen3/unsupported
+	EIGEN3_INC=-I/Users/ajx/Documents/eigen -I/Users/ajx/Documents/eigen/unsupported
 endif
 
 ifeq ($(IGL_USERNAME),alecjaco) 
