boost extra, connected components in mesh

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -28,6 +28,7 @@ ifeq ($(IGL_USERNAME),ajx)
 	IGL_WITH_MOSEK=1
 	IGL_WITH_PNG=1
 	IGL_WITH_XML=1
+	IGL_WITH_BOOST=1
 	# I don't use llvm
 #AFLAGS = -m64 -march="corei7-avx"
 	# msse4.2 is necessary for me to get embree to compile correctly
