--- a/examples/patches/example.vcxproj.filters
+++ b/examples/patches/example.vcxproj.filters
@@ -2,16 +2,103 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="example.cpp" />
-    <ClCompile Include="..\..\include\igl\orient_outward.cpp" />
-    <ClCompile Include="..\..\include\igl\orient_outward_ao.cpp" />
+    <ClCompile Include="..\..\..\ext_toolboxes\embree-1.1beta\rtcore\bvh2\bvh2_builder.cpp">
+      <Filter>embree-1.1beta\rtcore</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\ext_toolboxes\embree-1.1beta\rtcore\bvh2\bvh2_intersector.cpp">
+      <Filter>embree-1.1beta\rtcore</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\ext_toolboxes\embree-1.1beta\rtcore\bvh2\bvh2.cpp">
+      <Filter>embree-1.1beta\rtcore</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\ext_toolboxes\embree-1.1beta\rtcore\bvh4\bvh4_intersector.cpp">
+      <Filter>embree-1.1beta\rtcore</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\ext_toolboxes\embree-1.1beta\rtcore\bvh4\bvh4.cpp">
+      <Filter>embree-1.1beta\rtcore</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\ext_toolboxes\embree-1.1beta\rtcore\bvh4\bvh4_builder.cpp">
+      <Filter>embree-1.1beta\rtcore</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\ext_toolboxes\embree-1.1beta\rtcore\bvh4mb\bvh4mb_intersector.cpp">
+      <Filter>embree-1.1beta\rtcore</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\ext_toolboxes\embree-1.1beta\rtcore\bvh4mb\bvh4mb.cpp">
+      <Filter>embree-1.1beta\rtcore</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\ext_toolboxes\embree-1.1beta\rtcore\bvh4mb\bvh4mb_builder.cpp">
+      <Filter>embree-1.1beta\rtcore</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\ext_toolboxes\embree-1.1beta\rtcore\common\splitter_fallback.cpp">
+      <Filter>embree-1.1beta\rtcore</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\ext_toolboxes\embree-1.1beta\rtcore\common\splitter_parallel.cpp">
+      <Filter>embree-1.1beta\rtcore</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\ext_toolboxes\embree-1.1beta\rtcore\common\stat.cpp">
+      <Filter>embree-1.1beta\rtcore</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\ext_toolboxes\embree-1.1beta\rtcore\common\accel.cpp">
+      <Filter>embree-1.1beta\rtcore</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\ext_toolboxes\embree-1.1beta\rtcore\common\alloc.cpp">
+      <Filter>embree-1.1beta\rtcore</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\ext_toolboxes\embree-1.1beta\rtcore\common\heuristic_binning.cpp">
+      <Filter>embree-1.1beta\rtcore</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\ext_toolboxes\embree-1.1beta\rtcore\common\heuristic_spatial.cpp">
+      <Filter>embree-1.1beta\rtcore</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\ext_toolboxes\embree-1.1beta\rtcore\common\primrefgen.cpp">
+      <Filter>embree-1.1beta\rtcore</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\ext_toolboxes\embree-1.1beta\rtcore\common\splitter.cpp">
+      <Filter>embree-1.1beta\rtcore</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\ext_toolboxes\embree-1.1beta\common\sys\platform.cpp">
+      <Filter>embree-1.1beta\common</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\ext_toolboxes\embree-1.1beta\common\sys\sysinfo.cpp">
+      <Filter>embree-1.1beta\common</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\ext_toolboxes\embree-1.1beta\common\sys\taskscheduler_standard.cpp">
+      <Filter>embree-1.1beta\common</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\ext_toolboxes\embree-1.1beta\common\sys\thread.cpp">
+      <Filter>embree-1.1beta\common</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\ext_toolboxes\embree-1.1beta\common\sys\filename.cpp">
+      <Filter>embree-1.1beta\common</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\ext_toolboxes\embree-1.1beta\common\sys\library.cpp">
+      <Filter>embree-1.1beta\common</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\ext_toolboxes\embree-1.1beta\common\sys\stl\string.cpp">
+      <Filter>embree-1.1beta\common</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\ext_toolboxes\embree-1.1beta\common\sys\sync\mutex.cpp">
+      <Filter>embree-1.1beta\common</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\ext_toolboxes\embree-1.1beta\common\sys\sync\condition.cpp">
+      <Filter>embree-1.1beta\common</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="igl">
       <UniqueIdentifier>{53eff656-6473-409c-9ad5-cac1983d91e1}</UniqueIdentifier>
     </Filter>
+    <Filter Include="embree-1.1beta">
+      <UniqueIdentifier>{6d281f01-62c5-4083-90e7-1e9d55cf793c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="embree-1.1beta\rtcore">
+      <UniqueIdentifier>{ded8eb8e-e3c8-4405-9234-dd048cbb197d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="embree-1.1beta\common">
+      <UniqueIdentifier>{0c5327d6-c9c7-4e16-a8e3-d3ae7f7b42d9}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\include\igl\orient_outward_ao.h" />
-    <ClInclude Include="..\..\include\igl\orient_outward.h" />
+    <ClInclude Include="..\..\include\igl\embree\orient_outward_ao.h" />
   </ItemGroup>
 </Project>
