separted bbw as its own extra (mosek optional via IGL_NO_MOSEK), support for mosek 7, better control over verbosity in bbw

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -22,10 +22,12 @@ endif
 
 ifeq ($(IGL_USERNAME),ajx)
 	MOSEKPLATFORM=osx64x86
+	MOSEKVERSION=7
 	IGL_WITH_TETGEN=1
 	IGL_WITH_EMBREE=1
 	IGL_WITH_MATLAB=1
 	IGL_WITH_MOSEK=1
+	IGL_WITH_BBW=1
 	IGL_WITH_PNG=1
 	IGL_WITH_XML=1
 	IGL_WITH_BOOST=1
