--- a/include/igl/bbw/Makefile
+++ b/include/igl/bbw/Makefile
@@ -1,16 +1,16 @@
 include ../../../Makefile.conf
 
 .PHONY: all
-all: libiglmosek
-debug: libiglmosek
+all: libiglbbw
+debug: libiglbbw
 
 include ../../../Makefile.conf
 all: OPTFLAGS += -O3 -DNDEBUG $(OPENMP)
 debug: OPTFLAGS += -g -Wall
 CFLAGS += $(OPTFLAGS)
 
-.PHONY: libiglmosek
-libiglmosek: obj ../../../lib/libiglmosek.a
+.PHONY: libiglbbw
+libiglbbw: obj ../../../lib/libiglbbw.a
 
 CPP_FILES=$(wildcard *.cpp)
 OBJ_FILES=$(addprefix obj/,$(notdir $(CPP_FILES:.cpp=.o)))
@@ -24,6 +24,9 @@ INC+=-I../../../include/
 EIGEN3_INC=-I$(DEFAULT_PREFIX)/include/eigen3 -I$(DEFAULT_PREFIX)/include/eigen3/unsupported
 INC+=$(EIGEN3_INC)
 
+ifdef IGL_NO_MOSEK
+CFLAGS+=-DIGL_NO_MOSEK
+else
 # mosek dependency
 # TODO: linux, 32 bit etc
 ifndef MOSEKPLATFORM
@@ -32,15 +35,19 @@ endif
 ifndef MOSEKVERSION
   MOSEKVERSION=6
 endif
+IGLMOSEK=../mosek/
+IGLMOSEK_INC=-I$(IGLMOSEK)/
+INC+=${IGLMOSEK_INC}
 MOSEK=/usr/local/mosek
 MOSEK_INC=-I$(MOSEK)/$(MOSEKVERSION)/tools/platform/$(MOSEKPLATFORM)/h
 MOSEK_LIB=-L$(MOSEK)/$(MOSEKVERSION)/tools/platform/$(MOSEKPLATFORM)/bin -lmosek64
 INC+=$(MOSEK_INC)
+endif
 
 obj: 
 	mkdir -p obj
 
-../../../lib/libiglmosek.a: $(OBJ_FILES)
+../../../lib/libiglbbw.a: $(OBJ_FILES)
 	rm -f $@
 	ar cqs $@ $(OBJ_FILES)
 
@@ -49,4 +56,4 @@ obj/%.o: %.cpp %.h
 
 clean:
 	rm -f obj/*.o
-	rm -f ../../../lib/libiglmosek.a
+	rm -f ../../../lib/libiglbbw.a
