fixed examples and ambient occlusion to compile and run with embree 2.0
Former-commit-id: c16cb9ac5b26946ce7ba61e1a7d2cdc4ecf97861

--- a/examples/ambient-occlusion/Makefile
+++ b/examples/ambient-occlusion/Makefile
@@ -9,8 +9,8 @@ all: example
 .PHONY: example
 
 LIBIGL=../../
-LIBIGL_INC=-I$(LIBIGL)/include
-LIBIGL_LIB=-L$(LIBIGL)/lib -ligl -liglembree
+LIBIGL_INC=-I$(LIBIGL)/include -DIGL_HEADER_ONLY
+#LIBIGL_LIB=-L$(LIBIGL)/lib -ligl -liglembree
 
 EIGEN3_INC=-I/opt/local/include/eigen3 -I/opt/local/include/eigen3/unsupported
 
